--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,18 +1,14 @@
-FROM ltvanbinsbergen/funcons-tools:latest AS fct
+FROM node:15 
 
-FROM mhart/alpine-node AS node 
-
-COPY --from=fct /usr/bin/funcons-repl /usr/bin/funcons-repl
 COPY . /tmp/project/
-
 WORKDIR /tmp/project
 
-ENV FUNCONS_REPL /usr/bin/funcons-repl
+RUN apt-get update && apt-get -y install haskell-platform
+RUN cabal update && cabal install funcons-tools
 
-RUN apk add --no-cache make gcc g++ python3
+ENV FUNCONS_REPL /root/.cabal/bin/funcons-repl
 
 WORKDIR /tmp/project
 RUN npm install
 
 CMD ["npm","start"]
-
