--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "2"
 services:
   frontend:
-    image: "funcons-online-repl:latest" 
+    image: "ltvanbinsbergen/funcons-repl-xterm:latest" 
     ports: 
       - "8080:80"
   backend:
-    image: "funcons-repl-server:latest"
+    image: "ltvanbinsbergen/funcons-repl-server:latest"
     ports:
       - "3000:3000"
