--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "dependencies": {
     "socket.io": "^4.0.0",
     "socket.io-client": "^4.0.0",
-    "xterm": "^4.11.0"
+    "xterm": "^4.11.0",
+    "xterm-addon-fit": "^0.5.0"
   },
   "devDependencies": {
     "webpack": "^5.27.1",
