get funcons-repl executable by installing from git rather than hackage

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,7 +4,9 @@ COPY . /tmp/project/
 WORKDIR /tmp/project
 
 RUN apt-get update && apt-get -y install haskell-platform
-RUN cabal update && cabal install funcons-tools
+RUN git clone https://github.com/plancomps/funcons-tools.git
+WORKDIR /tmp/project/funcons-tools/
+RUN cabal update && cabal install
 
 ENV FUNCONS_REPL /root/.cabal/bin/funcons-repl
 
